tests/miniJava/pos/000758_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) if ( 0 ) { } else { } else while ( 0 ) { } } }
