tests/miniJava/neg/006210_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { void while ( 0 ) { } } }
